--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "phase1": "deno run --allow-net --allow-env src/phase1.ts"
+    "main": "deno run --allow-net --allow-env src/main.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
